--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-validation": "^2.10.9",
+    "realm": "^1.1.1",
     "redux": "^3.6.0"
   },
   "devDependencies": {
