--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-redux": "^5.0.3",
     "react-validation": "^2.10.9",
     "realm": "^1.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "tcomb": "^3.2.20",
+    "tcomb-validation": "^3.3.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
