--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "moment": "^2.17.1",
-    "react": "~15.4.0-rc.4",
-    "react-native": "0.41.2",
+    "react": "~15.4.1",
+    "react-native": "0.42.*",
     "react-native-camera": "^0.6.0",
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
