--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
 
+def homePath = System.properties['user.home']
+
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -87,7 +89,7 @@ android {
         config {
             keyAlias 'treesourcekey'
             keyPassword 'abood2007'
-            storeFile file('/Users/Almsaeed/.android/treesource.jks')
+            storeFile file("${homePath}/.android/treesource.jks")
             storePassword 'abood2007'
         }
     }
