--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ android/app/libs
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+ios/WildType.xcodeproj/project.pbxproj
+ios/WildType.xcodeproj/xcshareddata/xcschemes/WildType-tvOS.xcscheme
+ios/WildType.xcodeproj/xcshareddata/xcschemes/WildType.xcscheme
+ios/WildType/Info.plist
+ios/WildTypeTests/Info.plist
