--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "~15.4.1",
     "react-native": "0.42.*",
     "react-native-camera": "^0.6.0",
+    "react-native-image-slider": "^1.1.5",
+    "react-native-keyboard-aware-scroll-view": "^0.2.8",
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-picker": "0.0.16",
