--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.*",
     "react-native-camera": "^0.6.0",
+    "react-native-fs": "^2.1.0-rc.1",
     "react-native-image-slider": "^1.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
     "react-native-maps": "^0.13.0",
