--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,8 +2,6 @@ apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
 
-def homePath = System.properties['user.home']
-
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -85,18 +83,11 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'treesourcekey'
-            keyPassword 'abood2007'
-            storeFile file("${homePath}/.android/treesource.jks")
-            storePassword 'abood2007'
-        }
-    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+
     defaultConfig {
-        applicationId "com.wildtype"
+        applicationId "com.treesource"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -113,25 +104,10 @@ android {
             include "armeabi-v7a", "x86"
         }
     }
-    signingConfigs{
-        release{
-            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
-                storeFile file(MYAPP_RELEASE_STORE_FILE)
-                storePassword MYAPP_RELEASE_STORE_PASSWORD
-                keyAlias MYAPP_RELEASE_KEY_ALIAS
-                keyPassword MYAPP_RELEASE_KEY_PASSWORD
-            }
-        }
-    }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.config
-        }
-        debug {
-            debuggable true
-            signingConfig signingConfigs.config
         }
     }
     // applicationVariants are e.g. debug, release
@@ -139,7 +115,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
+            def versionCodes = ["armeabi-v7a":1, "x86":2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -150,15 +126,15 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fs')
     compile project(':realm')
-    compile project(':react-native-camera')
-    compile project(':react-native-maps')
     compile project(':react-native-vector-icons')
     compile project(':react-native-material-kit')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.facebook.react:react-native:+'
-    // From node_modules
+    compile project(':react-native-maps')
+    compile project(':react-native-camera')
+    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
