--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,14 @@ def enableProguardInReleaseBuilds = false
 
 android {
     signingConfigs {
+    release {
+                if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                    storeFile file(MYAPP_RELEASE_STORE_FILE)
+                    storePassword MYAPP_RELEASE_STORE_PASSWORD
+                    keyAlias MYAPP_RELEASE_KEY_ALIAS
+                    keyPassword MYAPP_RELEASE_KEY_PASSWORD
+                }
+                }
     }
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
@@ -109,6 +117,8 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+                        signingConfig signingConfigs.release
+
         }
     }
     // applicationVariants are e.g. debug, release
