--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "moment": "^2.17.1",
-    "react": "~15.4.1",
-    "react-native": "0.42.*",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.43.4",
     "react-native-camera": "^0.6.0",
     "react-native-fs": "^2.1.0-rc.1",
     "react-native-image-slider": "^1.1.5",
