--- a/ios/Treesnap/Info.plist
+++ b/ios/Treesnap/Info.plist
@@ -38,6 +38,8 @@
     </array>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs to access your camera.</string>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string/>
     <key>NSAppTransportSecurity</key>
