--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,11 +83,12 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
+    signingConfigs {
+    }
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
-        applicationId "com.treesnap"
+        applicationId "com.treesource"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -115,7 +116,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -126,15 +127,16 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-camera')
+    compile project(':react-native-fs')
     compile project(':realm')
     compile project(':react-native-vector-icons')
     compile project(':react-native-material-kit')
     compile project(':react-native-maps')
-    compile project(':react-native-fs')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-camera')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
