--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-resizer')
+    compile project(':react-native-fetch-blob')
     compile project(':react-native-camera')
     compile project(':react-native-fs')
     compile project(':realm')
