--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-native-camera": "~0.8.0",
     "react-native-fetch-blob": "^0.10.5",
     "react-native-fs": "^2.1.0-rc.1",
+    "react-native-image-pan-zoom": "^2.0.3",
     "react-native-image-resizer": "^0.1.1",
     "react-native-image-slider": "^1.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-picker": "0.0.16",
+    "react-native-photo-view": "^1.2.0",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.0.0",
     "realm": "^1.1.1",
