--- a/ios/Treesnap.xcodeproj/xcshareddata/xcschemes/Treesnap.xcscheme
+++ b/ios/Treesnap.xcodeproj/xcshareddata/xcschemes/Treesnap.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Treesnap.app"
-               BlueprintName = "Treesnap"
-               ReferencedContainer = "container:Treesnap.xcodeproj">
+               BuildableName = "TreeSnap.app"
+               BlueprintName = "TreeSnap"
+               ReferencedContainer = "container:TreeSnap.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TreesnapTests.xctest"
-               BlueprintName = "TreesnapTests"
-               ReferencedContainer = "container:Treesnap.xcodeproj">
+               BuildableName = "TreeSnapTests.xctest"
+               BlueprintName = "TreeSnapTests"
+               ReferencedContainer = "container:TreeSnap.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TreesnapTests.xctest"
-               BlueprintName = "TreesnapTests"
-               ReferencedContainer = "container:Treesnap.xcodeproj">
+               BuildableName = "TreeSnapTests.xctest"
+               BlueprintName = "TreeSnapTests"
+               ReferencedContainer = "container:TreeSnap.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Treesnap.app"
-            BlueprintName = "Treesnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            BuildableName = "TreeSnap.app"
+            BlueprintName = "TreeSnap"
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Treesnap.app"
-            BlueprintName = "Treesnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            BuildableName = "TreeSnap.app"
+            BlueprintName = "TreeSnap"
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Treesnap.app"
-            BlueprintName = "Treesnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            BuildableName = "TreeSnap.app"
+            BlueprintName = "TreeSnap"
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
