--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-picker": "0.0.16",
+    "react-native-permissions": "^0.2.7",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.0.0",
-    "realm": "^1.1.1",
+    "realm": "^1.8.0",
     "tcomb": "^3.2.20",
     "tcomb-validation": "^3.3.0"
   },
