--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "moment": "^2.17.1",
     "react": "~15.4.*",
     "react-native": "^0.42.*",
-    "react-native-camera": "~0.8.0",
+    "react-native-camera": "^0.9.4",
     "react-native-fetch-blob": "^0.10.5",
     "react-native-image-pan-zoom": "^2.0.3",
     "react-native-image-resizer": "^0.1.1",
