--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "moment": "^2.17.1",
     "react": "~15.4.*",
     "react-native": "^0.42.*",
-    "react-native-camera": "^0.10.0",
+    "react-native-camera": "^1.0.0-alpha1",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-pan-zoom": "^2.0.5",
+    "react-native-image-pan-zoom": "^2.0.6",
     "react-native-image-resizer": "^0.1.1",
     "react-native-image-slider": "^1.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
@@ -23,9 +23,9 @@
     "react-native-modal-picker": "0.0.16",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.3.0",
-    "realm": "^1.10.0",
+    "realm": "^1.10.3",
     "tcomb": "^3.2.22",
-    "tcomb-validation": "^3.4.0"
+    "tcomb-validation": "^3.4.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
