--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,13 @@ import com.android.build.OutputFile
  *   // bundleInPaidRelease: true,
  *   // bundleInBeta: true,
  *
+ *   // whether to disable dev mode in custom build variants (by default only disabled in release)
+ *   // for example: to disable dev mode in the staging build type (if configured)
+ *   devDisabledInStaging: true,
+ *   // The configuration property can be in the following formats
+ *   //         'devDisabledIn${productFlavor}${buildType}'
+ *   //         'devDisabledIn${buildType}'
+ *
  *   // the root of your project, i.e. where "package.json" lives
  *   root: "../../",
  *
@@ -59,7 +66,7 @@ import com.android.build.OutputFile
  *   inputExcludes: ["android/**", "ios/**"],
  *
  *   // override which node gets called and with what additional arguments
- *   nodeExecutableAndArgs: ["node"]
+ *   nodeExecutableAndArgs: ["node"],
  *
  *   // supply additional arguments to the packager
  *   extraPackagerArgs: []
@@ -137,12 +144,12 @@ android {
 }
 
 dependencies {
+    compile project(':realm')
+    compile project(':react-native-vector-icons')
     compile project(':react-native-material-kit')
     compile project(':react-native-image-resizer')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-camera')
-    compile project(':realm')
-    compile project(':react-native-vector-icons')
     compile project(':react-native-maps')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
