--- a/ios/Treesnap/Info.plist
+++ b/ios/Treesnap/Info.plist
@@ -37,6 +37,11 @@
           <key>NSExceptionAllowsInsecureHTTPLoads</key>
           <true/>
         </dict>
+        <key>localhost</key>
+        <dict>
+          <key>NSExceptionAllowsInsecureHTTPLoads</key>
+          <true/>
+        </dict>
       </dict>
     </dict>
     <key>NSCameraUsageDescription</key>
@@ -51,6 +56,7 @@
     <array>
       <string>Entypo.ttf</string>
       <string>EvilIcons.ttf</string>
+      <string>Feather.ttf</string>
       <string>FontAwesome.ttf</string>
       <string>Foundation.ttf</string>
       <string>Ionicons.ttf</string>
@@ -59,7 +65,6 @@
       <string>Octicons.ttf</string>
       <string>SimpleLineIcons.ttf</string>
       <string>Zocial.ttf</string>
-      <string>Feather.ttf</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
