--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "axios": "^0.15.3",
     "camelcase": "^4.1.0",
     "moment": "^2.19.1",
-    "react": "~15.4.*",
-    "react-native": "^0.42.*",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.45.0",
     "react-native-camera": "^1.0.0-alpha1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-pan-zoom": "^2.0.7",
     "react-native-image-resizer": "^0.1.1",
     "react-native-image-slider": "^1.1.5",
+    "react-native-iphone-x-helper": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-picker": "0.0.16",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.4.2",
-    "realm": "^1.13.0",
+    "react-navigation": "^1.0.0-beta.19",
+    "realm": "^2.0.2",
     "tcomb": "^3.2.24",
     "tcomb-validation": "^3.4.1"
   },
