--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,6 +73,10 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.react = [
+        nodeExecutableAndArgs: ["/usr/local/bin/node"]
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -101,7 +105,7 @@ android {
             }
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.treesource"
@@ -149,8 +153,8 @@ dependencies {
     compile project(':react-native-material-kit')
     compile project(':react-native-image-resizer')
     compile project(':react-native-fetch-blob')
-    compile project(':react-native-camera')
     compile project(':react-native-maps')
+    compile project(':react-native-camera')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
