--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "axios": "^0.15.3",
     "camelcase": "^4.1.0",
     "moment": "^2.19.1",
+    "node": "^9.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.45.0",
+    "react-native": "0.46.0",
     "react-native-camera": "^1.0.0-alpha1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-pan-zoom": "^2.0.7",
@@ -20,7 +21,7 @@
     "react-native-image-slider": "^1.1.5",
     "react-native-iphone-x-helper": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.2.8",
-    "react-native-maps": "^0.13.0",
+    "react-native-maps": "^0.17.1",
     "react-native-material-kit": "^0.4.1",
     "react-native-modal-picker": "0.0.16",
     "react-native-tab-view": "0.0.65",
@@ -34,6 +35,7 @@
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
+    "react-test-render": "^1.1.1",
     "react-test-renderer": "~15.4.0-rc.4"
   },
   "jest": {
