--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-background-task')
     compile project(':realm')
     compile project(':react-native-vector-icons')
     compile project(':react-native-material-kit')
