--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.5",
+    "react-native-background-fetch": "^2.2.1",
+    "react-native-background-task": "^0.2.1",
     "react-native-camera": "^0.10.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-pan-zoom": "^2.0.7",
