Fix upload screen error

--- a/ios/Treesnap/Info.plist
+++ b/ios/Treesnap/Info.plist
@@ -37,7 +37,7 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
-			<key>treesnap.app</key>
+			<key>treesnap.test</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
