--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,14 +106,15 @@ android {
             }
         }
     }
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.treesource"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1039
         versionName "1.1.2"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -149,17 +150,29 @@ android {
 }
 
 dependencies {
-    compile project(':realm')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-material-kit')
-    compile project(':react-native-image-resizer')
-    compile project(':react-native-fetch-blob')
-    compile project(':react-native-maps')
-    compile project(':react-native-camera')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.facebook.react:react-native:+'
+    implementation project(':realm')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-material-kit')
+    implementation project(':react-native-image-resizer')
+    implementation project(':react-native-fetch-blob')
+    implementation project(':react-native-maps')
+    implementation(project(':react-native-camera')) {
+        exclude group: "com.android.support"
+
+        // uncomment this if also com.google.android.gms:play-services-vision versions are conflicting
+        // this can happen if you use react-native-firebase
+//        exclude group: "com.google.android.gms"
+    }
+    // uncomment this if you uncommented this line (exclude group: "com.google.android.gms") above
+    //    compile ('com.google.android.gms:play-services-vision:11.6.0') {
+    //        force = true;
+    //    }
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.facebook.react:react-native:+'
     // From node_modules
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.android.support:exifinterface:26.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
