--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "TreeSnap",
-  "version": "1.1.3",
-  "buildNum": "1040",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "axios": "^0.17.1",
-    "camelcase": "^4.1.0",
-    "moment": "^2.20.1",
-    "prop-types": "^15.6.0",
-    "react": "16.0.0-beta.5",
-    "react-native": "0.49.5",
-    "react-native-background-fetch": "^2.2.1",
-    "react-native-background-task": "^0.2.1",
-    "react-native-camera": "^0.13.0",
-    "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-pan-zoom": "^2.0.16",
-    "react-native-image-resizer": "^1.0.0",
-    "react-native-image-slider": "^1.1.5",
-    "react-native-iphone-x-helper": "^1.0.2",
-    "react-native-keyboard-aware-scroll-view": "^0.4.3",
-    "react-native-maps": "^0.17.1",
-    "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
-    "react-native-tab-view": "0.0.65",
-    "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.0.0-beta.27",
-    "realm": "^2.2.4",
-    "tcomb": "^3.2.24",
-    "tcomb-validation": "^3.4.1"
-  },
-  "devDependencies": {
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "extract-zip": "^1.6.6",
-    "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+    "name": "TreeSnap",
+    "version": "1.1.3",
+    "buildNum": "1040",
+    "private": true,
+    "scripts": {
+        "start": "node node_modules/react-native/local-cli/cli.js start",
+        "test": "jest",
+        "postinstall": "rm ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
+    },
+    "dependencies": {
+        "axios": "^0.17.1",
+        "camelcase": "^4.1.0",
+        "moment": "^2.20.1",
+        "prop-types": "^15.6.0",
+        "react": "16.2.0",
+        "react-native": "0.53.3",
+        "react-native-camera": "^0.13.0",
+        "react-native-fetch-blob": "^0.10.8",
+        "react-native-image-pan-zoom": "^2.0.16",
+        "react-native-image-resizer": "~1.0.0",
+        "react-native-image-slider": "^1.1.5",
+        "react-native-iphone-x-helper": "^1.0.2",
+        "react-native-keyboard-aware-scroll-view": "^0.4.3",
+        "react-native-maps": "^0.17.1",
+        "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
+        "react-native-tab-view": "0.0.65",
+        "react-native-vector-icons": "^4.5.0",
+        "react-navigation": "^1.0.0-beta.27",
+        "realm": "^2.2.4",
+        "tcomb": "^3.2.24",
+        "tcomb-validation": "^3.4.1"
+    },
+    "devDependencies": {
+        "babel-jest": "18.0.0",
+        "babel-preset-react-native": "1.9.1",
+        "extract-zip": "^1.6.6",
+        "jest": "18.1.0",
+        "react-test-renderer": "~16.2.0"
+    },
+    "jest": {
+        "preset": "react-native"
+    }
 }
