--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "prop-types": "^15.6.1",
         "react": "16.2.0",
         "react-native": "0.53.3",
-        "react-native-camera": "~1.0.1",
+        "react-native-camera": "github:react-native-community/react-native-camera#master",
         "react-native-fetch-blob": "^0.10.8",
         "react-native-image-pan-zoom": "^2.0.16",
         "react-native-image-resizer": "~1.0.0",
@@ -26,8 +26,8 @@
         "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
         "react-native-tab-view": "0.0.65",
         "react-native-vector-icons": "^4.5.0",
-        "react-navigation": "^1.3.2",
-        "realm": "^2.2.13",
+        "react-navigation": "^1.4.0",
+        "realm": "^2.2.14",
         "tcomb": "^3.2.25",
         "tcomb-validation": "^3.4.1"
     },
