Fix android applicationId

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,7 +109,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "com.treesnap"
+        applicationId "com.treesource"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1039
