Fix image slider scrolling for android

--- a/android/app/src/main/assets/crashlytics-build.properties
+++ b/android/app/src/main/assets/crashlytics-build.properties
@@ -3,9 +3,9 @@
 #
 #Do NOT modify, delete, or commit to source control!
 #
-#Wed Mar 21 14:16:24 EDT 2018
+#Mon Apr 30 13:03:50 EDT 2018
 version_name=0.0
-package_name=com.treesnap
-build_id=3e0266c1-5267-489a-b9cd-21eaee9eeba8
+package_name=com.treesource
+build_id=d670e6be-1803-4a66-8df8-b5a65f4a4b75
 version_code=0
 app_name=TreeSnap
