--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "camelcase": "^4.1.0",
+    "geolib": "^2.0.24",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
