--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
+    "react-addons-update": "^15.6.2",
     "react-native": "0.53.3",
     "react-native-camera": "github:react-native-community/react-native-camera#master",
     "react-native-fetch-blob": "^0.10.8",
