--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,8 +5,7 @@ target 'TreeSnap' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
   
-  pod 'Firebase/Core'
-
+  pod 'Firebase/Core', '4.2.0'
 end
 
 post_install do |installer|
