--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TreeSnap",
-  "version": "1.3.2",
-  "buildNum": "1062",
+  "version": "1.4.0",
+  "buildNum": "1064",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -30,7 +30,7 @@
     "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.11",
+    "react-navigation": "2.0.4",
     "realm": "^2.6.0",
     "tcomb": "^3.2.25",
     "tcomb-validation": "^3.4.1"
