--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ dependencies {
         exclude group: "com.android.support"
         exclude group: "com.google.android.gms"
     }
+    implementation project(':react-native-push-notification')
     implementation project(':react-native-photo-view')
     implementation project(':realm')
     implementation project(':react-native-vector-icons')
