Run tests and fix pods

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,14 +10,10 @@ target 'TreeSnap' do
   pod 'Crashlytics', '~> 3.10.2'
 
   # Add new pods below this line
-  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-
-
-  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
-
-
-
   
+#  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+#  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
 end
 
 post_install do |installer|
