--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
         "react-native": "0.56.0",
         "react-native-camera": "github:react-native-community/react-native-camera#master",
         "react-native-device-info": "^0.21.5",
-        "react-native-fetch-blob": "^0.10.8",
         "react-native-firebase": "^3.3.1",
         "react-native-i18n": "^2.0.15",
-        "react-native-image-pan-zoom": "^2.1.7",
+        "react-native-image-pan-zoom": "^2.1.10",
         "react-native-image-resizer": "~1.0.0",
         "react-native-image-slider": "^1.1.5",
-        "react-native-iphone-x-helper": "^1.0.3",
+        "react-native-iphone-x-helper": "^1.2.0",
         "react-native-keyboard-aware-scroll-view": "^0.4.4",
         "react-native-maps": "^0.20.0",
         "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
@@ -36,16 +35,17 @@
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "2.0.4",
         "realm": "2.10.0",
+        "rn-fetch-blob": "github:joltup/rn-fetch-blob#v0.10.13",
         "tcomb": "^3.2.25",
         "tcomb-validation": "^3.4.1"
     },
     "devDependencies": {
-        "@babel/core": "~7.0.0-beta.56",
-        "babel-jest": "^23.4.2",
+        "@babel/core": "^7.1.2",
+        "babel-jest": "^23.6.0",
         "babel-preset-react-native": "^5.0.2",
         "extract-zip": "^1.6.7",
-        "jest": "^23.4.2",
-        "react-test-renderer": "^16.4.2"
+        "jest": "^23.6.0",
+        "react-test-renderer": "^16.5.2"
     },
     "jest": {
         "preset": "react-native",
