Update package json

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "react-native-tab-view": "0.0.65",
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "2.0.4",
-        "realm": "2.10.0",
+        "realm": "^2.21.1",
         "rn-fetch-blob": "github:joltup/rn-fetch-blob#v0.10.13",
         "tcomb": "^3.2.29",
         "tcomb-validation": "^3.4.1"
