--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-preset-react-native": "^4.0.1",
         "camelcase": "^4.1.0",
         "geolib": "^2.0.24",
+        "i18n-js": "^3.2.1",
         "moment": "^2.24.0",
         "prop-types": "^15.6.2",
         "react": "16.6.3",
@@ -29,9 +30,10 @@
         "react-native-image-slider": "^1.1.5",
         "react-native-iphone-x-helper": "^1.2.0",
         "react-native-keyboard-aware-scroll-view": "^0.4.4",
+        "react-native-localize": "^1.0.1",
         "react-native-maps": "^0.23.0",
-        "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
         "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
+        "react-native-progress": "^3.5.0",
         "react-native-push-notification": "github:statonlab/react-native-push-notification#master",
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "^2.18.3",
