--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,7 +125,7 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
+            include "armeabi-v7a", "x86", "arm64-v8a"
         }
     }
     buildTypes {
@@ -140,7 +140,11 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
+//<<<<<<< ours
+//            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
+//=======
+            def versionCodes = ["armeabi-v7a":1, "x86":2, "arm64-v8a": 3]
+//>>>>>>> theirs
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -154,9 +158,7 @@ dependencies {
     def supportLibVersion = rootProject.hasProperty('supportLibVersion') ? rootProject.supportLibVersion : "27.1.0"
     def googlePlayServicesVersion = rootProject.hasProperty('googlePlayServicesVersion') ? rootProject.googlePlayServicesVersion : "15.0.0"
 
-    implementation project(':react-native-localize')
     implementation project(':react-native-device-info')
-    implementation project(':react-native-i18n')
     implementation(project(':react-native-firebase')) {
         exclude group: "com.android.support"
         exclude group: "com.google.android.gms"
