--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,11 +7,17 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "27.0.3"
+        buildToolsVersion = "28.0.2"
         minSdkVersion = 16
-        compileSdkVersion = 27
-        targetSdkVersion = 26
-        supportLibVersion = "26.1.0"
+//<<<<<<< ours
+//        compileSdkVersion = 27
+//        targetSdkVersion = 26
+//        supportLibVersion = "26.1.0"
+//=======
+        compileSdkVersion = 28
+        targetSdkVersion = 27
+        supportLibVersion = "28.0.0"
+//>>>>>>> theirs
     }
     repositories {
         maven { url 'https://maven.google.com' }
@@ -20,9 +26,13 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+//<<<<<<< ours
+//        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.google.gms:google-services:3.2.1'
         classpath 'io.fabric.tools:gradle:1.25.4'
+//=======
+        classpath 'com.android.tools.build:gradle:3.2.1'
+//>>>>>>> theirs
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -57,13 +67,13 @@ allprojects {
 ext {
     buildToolsVersion = "26.0.3"
     minSdkVersion = 16
-    compileSdkVersion = 26
-    targetSdkVersion = 26
-    supportLibVersion = "26.1.0"
+    compileSdkVersion = 28
+    targetSdkVersion = 27
+    supportLibVersion = "28.0.0"
     firebaseVersion = '15.0.0'
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
+    gradleVersion = '4.7'
     distributionUrl = distributionUrl.replace("bin", "all")
 }
