--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
           package="com.treesource">
 
   <uses-permission android:name="android.permission.INTERNET"/>
-<!--  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>-->
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -35,6 +35,12 @@
     <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyDwCwo9N7qFEzCUb7Z291JYR2niyoNj-QY"/>
+    <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_name"
+                android:value="reminders"/>
+    <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_description"
+                android:value="Reminders regarding unpublished observations"/>
+    <meta-data  android:name="com.dieam.reactnativepushnotification.notification_color"
+                android:resource="@android:color/white"/>
 
     <activity
         android:name="com.treesource.MainActivity"
