--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,5 +18,5 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # org.gradle.parallel=true
 android.useDeprecatedNdk=true
 #android.threadPool=4
-android.enableAapt2 = true
+#android.enableAapt2 = true
 
