--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,16 +15,16 @@ target 'TreeSnap' do
   'RCTAnimation', # Needed for FlatList and animations running on native UI thread
   # Add any other subspecs you want to use in your project
   ]
-  
+
   # Explicitly include Yoga if you are using RN >= 0.42.0
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
-  
+
   # Third party deps podspec link
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  
+
   pod 'Firebase/Core', '4.2.0'
   pod 'Fabric', '~> 1.7.7'
   pod 'Crashlytics', '~> 3.10.2'
@@ -34,9 +34,7 @@ target 'TreeSnap' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
-
-#  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
-#  pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
 end
 
 post_install do |installer|
