--- a/ios/TreeSnap.xcodeproj/xcshareddata/xcschemes/TreeSnap.xcscheme
+++ b/ios/TreeSnap.xcodeproj/xcshareddata/xcschemes/TreeSnap.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "TreeSnap.app"
                BlueprintName = "TreeSnap"
-               ReferencedContainer = "container:Treesnap.xcodeproj">
+               ReferencedContainer = "container:TreeSnap.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -49,7 +49,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "TreeSnapTests.xctest"
                BlueprintName = "TreeSnapTests"
-               ReferencedContainer = "container:Treesnap.xcodeproj">
+               ReferencedContainer = "container:TreeSnap.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -59,7 +59,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TreeSnap.app"
             BlueprintName = "TreeSnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,7 +82,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TreeSnap.app"
             BlueprintName = "TreeSnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -101,7 +101,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "TreeSnap.app"
             BlueprintName = "TreeSnap"
-            ReferencedContainer = "container:Treesnap.xcodeproj">
+            ReferencedContainer = "container:TreeSnap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
