--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.3.3",
+        "@react-native-community/netinfo": "^2.0.5",
         "axios": "^0.18.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "babel-preset-react-native": "^4.0.1",
@@ -30,8 +31,8 @@
         "react-native-maps": "^0.24.2",
         "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
         "react-native-progress": "^3.6.0",
-        "react-native-push-notification": "github:statonlab/react-native-push-notification#master",
-        "react-native-vector-icons": "^4.6.0",
+        "react-native-push-notification": "^3.1.3",
+        "react-native-vector-icons": "^6.4.2",
         "react-navigation": "^2.18.3",
         "realm": "^2.26.0",
         "rn-fetch-blob": "github:joltup/rn-fetch-blob#v0.10.13",
