--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,7 +117,7 @@ android {
         applicationId "com.treesource"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1803
+        versionCode 1804
         versionName "1.12.1"
         missingDimensionStrategy 'react-native-camera', 'general'
         multiDexEnabled true
@@ -187,6 +187,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-appinvite:18.0.0"
     implementation "com.google.firebase:firebase-core:17.2.0"
     implementation "com.google.firebase:firebase-analytics:17.2.0"
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'androidx.multidex:multidex:2.0.1'
