--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@react-native-community/async-storage": "^1.3.3",
         "@react-native-community/netinfo": "^4.1.0",
+        "@react-native-community/push-notification-ios": "^1.0.3",
         "axios": "^0.19.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "babel-preset-react-native": "^4.0.1",
