--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "TreeSnap",
-    "version": "1.14.0",
-    "buildNum": "1900",
+    "version": "1.15.0",
+    "buildNum": "2000",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -31,7 +31,7 @@
         "react-native-device-info": "^0.29.1",
         "react-native-firebase": "~5.6.0",
         "react-native-gesture-handler": "^1.7.0",
-        "react-native-image-resizer": "^1.2.6",
+        "react-native-image-resizer": "~1.2.6",
         "react-native-iphone-x-helper": "^1.2.1",
         "react-native-keyboard-aware-scroll-view": "^0.9.2",
         "react-native-maps": "^0.27.1",
@@ -45,7 +45,7 @@
         "react-navigation-drawer": "^1.4.0",
         "react-navigation-stack": "^1.10.3",
         "react-navigation-tabs": "^1.2.0",
-        "realm": "^6.1.0",
+        "realm": "~6.1.2",
         "rn-fetch-blob": "^0.12.0",
         "tcomb": "^3.2.29",
         "tcomb-validation": "^3.4.1"
